--- a/style.css
+++ b/style.css
@@ -198,17 +198,16 @@ a .fas {
 }
 
 .main-container {
-  margin-top: 50px;
+  padding: 50px 0;
   margin-left: auto;
   margin-right: auto;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
 
-.quiz-1-container,
-.quiz-2-container,
-.quiz-3-container {
+.flex-item {
   width: 30%;
   height: 300px;
   border-radius: 30px;
@@ -273,6 +272,7 @@ a .fas {
 }
 
 .quiz-level {
+  display: inline-block;
   font-family: 'Fredoka One', cursive;
 }
 
@@ -447,21 +447,6 @@ footer {
   background-color: blue;
 }
 
-#wheels {
-  transform-origin: 50% 50%;
-  transform-box: fill-box;
-  cursor: pointer;
-}
-
-#bicycle-body {
-  cursor: pointer;
-}
-
-#wheels:hover ~ #bicycle-body {
-  transition: opacity 0.3s;
-  opacity: 30%;
-}
-
 /* CSS FOR SVG */
 
 .cls-100 {
@@ -480,19 +465,22 @@ footer {
   fill: #e25822;
 }
 
-@media (max-width: 1300px) {
-  header {
-    padding: 10px 0;
-  }
-  .main-container {
-    flex-direction: column;
-    padding-bottom: 2.5rem;
-  }
-  .quiz-1-container,
-  .quiz-2-container,
-  .quiz-3-container {
-    width: 80%;
+@media (max-width: 1425px) {
+  .flex-item{
+    width: 48%;
     margin-bottom: 20px;
+  }
+  .quiz-level {
+    font-size: 0.8rem;
+  }
+  .quiz-title {
+    font-size: 1.8rem;
+  }
+}
+
+@media (max-width: 820px) {
+  header {
+    padding: 20px 0;
   }
   nav {
     width: 80%;
@@ -527,6 +515,24 @@ footer {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+  }
+  .main-container {
+    flex-direction: column;
+  }
+  .quiz-icon {
+    padding: 0px 40px 0 0;
+    font-size: 20px;
+  }
+  .flex-item{
+    width: 90%;
+    height: 200px;
+    margin-bottom: 20px;
+  }
+  .quiz-level {
+    font-size: 0.5rem;
+  }
+  .quiz-title {
+    font-size: 1.2rem;
   }
   .back-container {
     text-align: center;
